[package]
name = "transfer-proxy-rs"
version = "0.1.0"
authors = ["404"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
md-5 = "0.10.6"
uuid = "1.22.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-saphyr = "0.0.21"
rand = "0.10.0"
base64 = "0.22.1"
maxminddb = "0.27.3"
ipnetwork = "0.21.1"
